# projeto_eucalipto

./: .gitignore  .gitmodules  Dockerfile.orchestrator  README.md  analyze_point_cloud_volume_drop.py  analyze_trunk_diagnostics.py  count_mesh_objects.py  dbh_results.csv  docker-compose.yml  extract_tree_segment_for_leafwood.py  installation.md  map_leafwood_predictions_all_segments_to_laz.py  map_leafwood_predictions_to_laz.py  process_commercial_volume.py  pyproject.toml  rayextract_treeinfo_analysis.ipynb  requirements.txt  run_ff3d_pipeline.py  run_pipeline.py  run_pipeline.sh  run_treeiso_pipeline.py  setup.sh  volume_analysis.ipynb  volume_results.csv
configs/: ff3d_full.yaml  rayextract_full.yaml  treeiso_leafwood.yaml
dashboard/: server.py
dashboard/static/: about.txt  app.js  index.html  style.css
docker/: Dockerfile.forestformer  Dockerfile.open3dml
eucalipto/: __init__.py  adapters.py  capabilities.py  config_schema.py  contracts.py  dbh_methods.py  dependencies.py  io.py  isolation_ff3d.py  isolation_treeiso.py  leafwood_docker.py  output_contract.py  pipeline_core.py  preprocess_treeiso.py  rayextract_processor.py  runner.py  treeiso_exports.py  trunk_cleanup.py  trunk_heuristic.py  validation.py  volume_methods.py
tests/: test_config_schema_unittest.py  test_output_contract_unittest.py
utils/: a1.ipynb  crop_cloud.py
