[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projeto-eucalipto"
version = "0.1.0"
description = "Canonical modular pipelines for LiDAR tree processing"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "laspy[lazrs]",
  "plyfile",
  "scipy",
  "scikit-learn",
  "pyransac3d",
  "pyyaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
